--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
   </head>
 <body>
@@ -12,10 +12,10 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html">
+          <a href="https://github.com/Mangolik/Coursera-assignment">
           </a>
           <div class="navbar-brand">
-            <a href="index.html"><h1>Food, LLC</h1></a>
+            <a href="https://github.com/Mangolik/Coursera-assignment"><h1>Food, LLC</h1></a>
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -29,13 +29,13 @@
         <div id="collapsable-nav" class="collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right" class="hidden-xs">
             <li>
-             <a href="a.html"> Chicken</a>
+             <a href="https://github.com/Mangolik/Coursera-assignment"> Chicken</a>
             </li>
             <li>
-             <a href="a.html"> Beef</a>
+             <a href="https://github.com/Mangolik/Coursera-assignment"> Beef</a>
             </li>
             <li>
-             <a href="a.html"> Sushi</a>
+             <a href="https://github.com/Mangolik/Coursera-assignment"> Sushi</a>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
