--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <div id="collapsable-nav" class="collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right" class="hidden-xs">
             <li>
-             <a href="https://github.com/Mangolik/Coursera-assignment/"> Chicken</a>
+             <a href="https://github.com/Mangolik/Coursera-assignment/index.html"> Chicken</a>
             </li>
             <li>
-             <a href="https://github.com/Mangolik/Coursera-assignment/"> Beef</a>
+             <a href="https://github.com/Mangolik/Coursera-assignment/index.html"> Beef</a>
             </li>
             <li>
-             <a href="https://github.com/Mangolik/Coursera-assignment/"> Sushi</a>
+             <a href="https://github.com/Mangolik/Coursera-assignment/index.html"> Sushi</a>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
