--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="https://github.com/Mangolik/Coursera-assignment/">
+          <a href="https://github.com/Mangolik/Coursera-assignment/index.html">
           </a>
           <div class="navbar-brand">
-            <a href="https://github.com/Mangolik/Coursera-assignment/"><h1>Food, LLC</h1></a>
+            <a href="https://github.com/Mangolik/Coursera-assignment/index.html"><h1>Food, LLC</h1></a>
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
