--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="https://github.com/Mangolik/Coursera-assignment/index.html">
+          <a href="https://mangolik.github.io/Coursera-assignment/index.html">
           </a>
           <div class="navbar-brand">
-            <a href="https://github.com/Mangolik/Coursera-assignment/index.html"><h1>Food, LLC</h1></a>
+            <a href="https://mangolik.github.io/Coursera-assignment/index.html"><h1>Food, LLC</h1></a>
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -29,13 +29,13 @@
         <div id="collapsable-nav" class="collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right" class="hidden-xs">
             <li>
-             <a href="https://github.com/Mangolik/Coursera-assignment/index.html"> Chicken</a>
+             <a href="https://mangolik.github.io/Coursera-assignment/index.html"> Chicken</a>
             </li>
             <li>
-             <a href="https://github.com/Mangolik/Coursera-assignment/index.html"> Beef</a>
+             <a href="https://mangolik.github.io/Coursera-assignment/index.html"> Beef</a>
             </li>
             <li>
-             <a href="https://github.com/Mangolik/Coursera-assignment/index.html"> Sushi</a>
+             <a href="https://mangolik.github.io/Coursera-assignment/index.html"> Sushi</a>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
