--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://github.com/Mangolik/Coursera-assignment/blob/master/bootstrap.min.css">
+    <link rel="stylesheet" href="https://github.com/Mangolik/Coursera-assignment/blob/master/styles.css">
   </head>
 <body>
   <header>
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html">
+          <a href="https://mangolik.github.io/Coursera-assignment/">
           </a>
           <div class="navbar-brand">
-            <a href="index.html"><h1>Food, LLC</h1></a>
+            <a href="https://mangolik.github.io/Coursera-assignment/"><h1>Food, LLC</h1></a>
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -29,13 +29,13 @@
         <div id="collapsable-nav" class="collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right" class="hidden-xs">
             <li>
-             <a href="a.html"> Chicken</a>
+             <a href="https://mangolik.github.io/Coursera-assignment/"> Chicken</a>
             </li>
             <li>
-             <a href="a.html"> Beef</a>
+             <a href="https://mangolik.github.io/Coursera-assignment/"> Beef</a>
             </li>
             <li>
-             <a href="a.html"> Sushi</a>
+             <a href="https://mangolik.github.io/Coursera-assignment/"> Sushi</a>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
