--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://github.com/Mangolik/Coursera-assignment/master/bootstrap.min.css">
-    <link rel="stylesheet" href="https://github.com/Mangolik/Coursera-assignment/master/styles.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
 <body>
   <header>
