--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
       </div>
         
-        <div id="collapsable-nav" class="collapse">
+        <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right" class="hidden-xs">
             <li>
              <a href="https://mangolik.github.io/Coursera-assignment/index.html"> Chicken</a>
