--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://mangolik.github.io/Coursera-assignment/bootstrap.min.css">
+    <link rel="stylesheet" href="https://mangolik.github.io/Coursera-assignment/styles.css">
   </head>
 <body>
   <header>
@@ -26,7 +26,7 @@
         </div>
       </div>
         
-        <div id="collapsable-nav" class="collapse navbar-collapse">
+        <div id="collapsable-nav" class="collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right" class="hidden-xs">
             <li>
              <a href="https://mangolik.github.io/Coursera-assignment/index.html"> Chicken</a>
