--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
       </div>
         
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right" class="hidden-xs">
+        <div id="collapsable-nav" class="collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
              <a href="https://mangolik.github.io/Coursera-assignment/index.html"> Chicken</a>
             </li>
