--- a/index.html
+++ b/index.html
@@ -1,77 +1,13 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://mangolik.github.io/Coursera-assignment/bootstrap.min.css">
-    <link rel="stylesheet" href="https://mangolik.github.io/Coursera-assignment/styles.css">
-  </head>
-<body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="https://mangolik.github.io/Coursera-assignment/index.html">
-          </a>
-          <div class="navbar-brand">
-            <a href="https://mangolik.github.io/Coursera-assignment/index.html"><h1>Food, LLC</h1></a>
-          </div>
-
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-      </div>
-        
-        <div id="collapsable-nav" class="collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right" class="hidden-xs">
-            <li>
-             <a href="https://mangolik.github.io/Coursera-assignment/index.html"> Chicken</a>
-            </li>
-            <li>
-             <a href="https://mangolik.github.io/Coursera-assignment/index.html"> Beef</a>
-            </li>
-            <li>
-             <a href="https://mangolik.github.io/Coursera-assignment/index.html"> Sushi</a>
-            </li>
-          </ul><!-- #nav-list -->
-        </div><!-- .collapse .navbar-collapse -->
-      </div><!-- .container -->
-    </nav><!-- #header-nav -->
-  </header>
-
-    <h2 id="top" class="text-center">Our Menu</h2 > 
-
-      <div id="main-content">
-        <div class="row">
-            <h3 id="menu-item-title" class="text-center">Chicken</h3>
-            <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-xxs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.</p>
-        </div>
-      </div>
-       </div>
-
-      <div id="main-content">
-        <div class="row">
-            <h3 id="menu-item-title" class="text-center">Beef</h3>
-            <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-xxs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.</p>
-        </div>
-      </div>
-       </div>
-
-      <div id="main-content">
-        <div class="row">
-            <h3 id="menu-item-title" class="text-center">Sushi</h3>
-            <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-xxs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.</p>
-        </div>
-      </div>
-    </div>  
-
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="jquery-2.1.4.min.js"></script>
-  <script src="bootstrap.min.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
+</head>
+<body>
+  <h1>Module 4 Solution Starter</h1>
 </body>
 </html>
